updated JavaFX version